vivastreet.co.in (archived on 2019-06-10)
{
  "alexa_rank": 109435,
  "analysis_subcorpus": true,
  "categories": "business;shopping",
  "char_count": 4894,
  "classifier_probability": 0.91,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 9.94,
  "homepage_snapshot_redirected_domain": "vivastreet.co.in",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190402062534id_/https://www.vivastreet.co.in/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190402062534id_/http%3A//vivastreet.co.in",
  "interval": "2019_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "vivastreet.co.in",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190610045854id_/https%3A//www.vivastreet.co.in/s/policy",
  "policy_title": "Privacy Policy",
  "policy_url": "vivastreet.co.in/s/policy",
  "sha1": "859c55b1b5eb9abcf2b8d8de77296c2fe5db1e94",
  "simhash": 2892040501034040550,
  "simhash_updated": false,
  "site_hostname": "vivastreet.co.in",
  "site_url": "http://vivastreet.co.in",
  "smog": 13.13,
  "strict_updated": false,
  "timestamp": "20190610045854",
  "word_count": 849,
  "year": 2019
}

--- a/v/vi/viv/vivastreet.co.in.html
+++ b/v/vi/viv/vivastreet.co.in.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the vivastreet.co.in privacy policy that was archived on 2018-12-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181203005736id_/http%3A//www.vivastreet.co.in/s/policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the vivastreet.co.in privacy policy that was archived on 2019-06-10.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190610045854id_/https%3A//www.vivastreet.co.in/s/policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -166,65 +166,53 @@ Session cookies do not collect information from the user's computer
             <li class="kiwii-xxxdark-gray kiwii-no-link-decoration kiwii-font-small">
                                                     <a href="http://www.vivastreet.co.in/pondicherry-region" class="kiwii-xxxdark-gray kiwii-no-link-decoration kiwii-font-small">Pondicherry</a>
         </li>
-            <li class="kiwii-xxxdark-gray kiwii-no-link-decoration kiwii-font-small">
-                                                    <a href="http://www.vivastreet.co.in/jammu-&amp;-kashmir" class="kiwii-xxxdark-gray kiwii-no-link-decoration kiwii-font-small">Jammu &amp; Kashmir</a>
-        </li>
-            <li class="kiwii-xxxdark-gray kiwii-no-link-decoration kiwii-font-small">
-                                                    <a href="http://www.vivastreet.co.in/arunachal-pradesh-region" class="kiwii-xxxdark-gray kiwii-no-link-decoration kiwii-font-small">Arunachal Pradesh</a>
-        </li>
-            <li class="kiwii-xxxdark-gray kiwii-no-link-decoration kiwii-font-small">
-                                                    <a href="http://www.vivastreet.co.in/andaman-nicobar" class="kiwii-xxxdark-gray kiwii-no-link-decoration kiwii-font-small">Andaman Nicobar</a>
-        </li>
-            <li class="kiwii-xxxdark-gray kiwii-no-link-decoration kiwii-font-small">
-                                                    <a href="http://www.vivastreet.co.in/dadra-&amp;-nagar-haveli-region" class="kiwii-xxxdark-gray kiwii-no-link-decoration kiwii-font-small">Dadra &amp; Nagar Haveli</a>
-        </li>
     </ul> </div> </div> <div class="kiwii-bg-white kiwii-border-top-light-gray kiwii-margin-top-large kiwii-clear-both"> <div class="kiwii-span-20 kiwii-center-hor"> <div id="vs_footer"> <div class="kiwii-box kiwii-box-padding kiwii-box-clear"></div> <div class="kiwii-box kiwii-box-padding kiwii-box-clear"></div> <div class="kiwii-box kiwii-box-padding kiwii-box-white"> <div class="vs-footer-links"> <h3>Vivastreet</h3> <ul class="kiwii-h-list">
                                         <li>
-            <a rel="nofollow" href="http://www.vivastreet.co.in/s/mobile" target="_self" style="">Vivastreet &nbsp;Mobile</a>
+            <a rel="nofollow" href="https://www.vivastreet.co.in/s/mobile" target="_self" style="">Vivastreet &nbsp;Mobile</a>
                             <span class="kiwii-margin-right-xxxsmall">|</span>
                     </li>
                                         <li>
-            <a rel="nofollow" href="http://www.vivastreet.co.in/s/team" target="_self" style="">About Us</a>
+            <a rel="nofollow" href="https://www.vivastreet.co.in/s/team" target="_self" style="">About Us</a>
                             <span class="kiwii-margin-right-xxxsmall">|</span>
                     </li>
                                         <li>
-            <a rel="nofollow" href="http://www.vivastreet.co.in/s/Pro_user_area" target="_self" style="">Professional Accounts </a>
+            <a rel="nofollow" href="https://www.vivastreet.co.in/s/Pro_user_area" target="_self" style="">Professional Accounts </a>
                             <span class="kiwii-margin-right-xxxsmall">|</span>
                     </li>
                                         <li>
-            <a rel="nofollow" href="http://www.vivastreet.co.in/s/contact?issue=advertising" target="_self" style="">Advertise with us</a>
+            <a rel="nofollow" href="https://www.vivastreet.co.in/s/contact?issue=advertising" target="_self" style="">Advertise with us</a>
                             <span class="kiwii-margin-right-xxxsmall">|</span>
                     </li>
                                         <li>
-            <a rel="nofollow" href="http://www.vivastreet.co.in/s/contact-us" target="_self" style="">Contact us</a>
+            <a rel="nofollow" href="https://www.vivastreet.co.in/s/contact-us" target="_self" style="">Contact us</a>
                     </li>
     </ul>
  </div> <div class="vs-footer-links kiwii-margin-top-xxsmall"> <h3>Help/Info</h3> <ul class="kiwii-h-list">
                                         <li>
-            <a rel="nofollow" href="http://www.vivastreet.co.in/s/legal" target="_self" style="">Terms and Conditions</a>
+            <a rel="nofollow" href="https://www.vivastreet.co.in/s/legal" target="_self" style="">Terms and Conditions</a>
                             <span class="kiwii-margin-right-xxxsmall">|</span>
                     </li>
                                         <li>
-            <a rel="nofollow" href="http://www.vivastreet.co.in/s/help" target="_self" style="">Help and FAQs</a>
+            <a rel="nofollow" href="https://www.vivastreet.co.in/s/help" target="_self" style="">Help and FAQs</a>
                             <span class="kiwii-margin-right-xxxsmall">|</span>
                     </li>
                                         <li>
-            <a rel="nofollow" href="http://www.vivastreet.co.in/s/warning" target="_self" style="color:#cc0000;font-weight:bold;">How to avoid scams</a>
+            <a rel="nofollow" href="https://www.vivastreet.co.in/s/warning" target="_self" style="color:#cc0000;font-weight:bold;">How to avoid scams</a>
                             <span class="kiwii-margin-right-xxxsmall">|</span>
                     </li>
                                         <li>
-            <a rel="nofollow" href="http://www.vivastreet.co.in/s/premium" target="_blank" style="">Premium Ads</a>
+            <a rel="nofollow" href="https://www.vivastreet.co.in/s/premium" target="_blank" style="">Premium Ads</a>
                             <span class="kiwii-margin-right-xxxsmall">|</span>
                     </li>
                                         <li>
-            <a rel="nofollow" href="http://www.vivastreet.co.in/s/policy" target="_self" style="">Privacy Policy</a>
+            <a rel="nofollow" href="https://www.vivastreet.co.in/s/policy" target="_self" style="">Privacy Policy</a>
                             <span class="kiwii-margin-right-xxxsmall">|</span>
                     </li>
                                         <li>
-            <a rel="nofollow" href="http://www.vivastreet.co.in/s/cookies" target="_self" style="">Vivastreet Cookie Policy</a>
+            <a rel="nofollow" href="https://www.vivastreet.co.in/s/cookies" target="_self" style="">Vivastreet Cookie Policy</a>
                     </li>
     </ul>
- </div> <div class="vs-footer-links kiwii-margin-top-xxsmall"> <h3>Useful links</h3> <ul class="kiwii-h-list"> <li><a class="kiwii-margin-right-xxxsmall" href="https://post.vivastreet.co.in">Post your ad</a></li> </ul> </div> </div> <div class="kiwii-box kiwii-box-padding kiwii-box-clear"> <div id="vs-seo-text"></div> </div> <div class="kiwii-box kiwii-box-padding kiwii-box-clear"> <div class="kiwii-font-tiny">Copyright © 2018 Vivastreet - Part of DV International Ltd.<br>*Most of the categories on Vivastreet are free to post. However, in order to provide you with a quality service and security, some categories will charge a fee. These fees are clearly listed before you confirm your advert.</div> <div class="kiwii-font-tiny"> </div> </div> </div> </div> </div>               <!-- Phoenix pageType new slot  -->
+ </div> <div class="vs-footer-links kiwii-margin-top-xxsmall"> <h3>Useful links</h3> <ul class="kiwii-h-list"> <li><a class="kiwii-margin-right-xxxsmall" href="https://post.vivastreet.co.in">Post your ad</a></li> </ul> </div> </div> <div class="kiwii-box kiwii-box-padding kiwii-box-clear"> <div id="vs-seo-text"></div> </div> <div class="kiwii-box kiwii-box-padding kiwii-box-clear"> <div class="kiwii-font-tiny">Copyright © 2019 Vivastreet - Part of DV International Ltd.<br>*Most of the categories on Vivastreet are free to post. However, in order to provide you with a quality service and security, some categories will charge a fee. These fees are clearly listed before you confirm your advert.</div> <div class="kiwii-font-tiny"> </div> </div> </div> </div> </div>               <!-- Phoenix pageType new slot  -->
 <script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-M7ZFTZ"></script><script>
 var pageType = document.body.getAttribute("data-controller");
 if(pageType === undefined | pageType === null  ){
