hoodamateurs.com (archived on 2019-06-10)
{
  "alexa_rank": 161751,
  "analysis_subcorpus": true,
  "categories": "adult",
  "char_count": 7202,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.45,
  "homepage_snapshot_redirected_domain": "hoodamateurs.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190403105703id_/http://www.hoodamateurs.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190403105703id_/http%3A//hoodamateurs.com",
  "interval": "2019_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "hoodamateurs.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190610080848id_/http%3A//www.hoodamateurs.com/static/privacy",
  "policy_title": "Privacy Policy",
  "policy_url": "hoodamateurs.com/static/privacy",
  "sha1": "5d0ef52c376405861a42b09e9edb96bb988fd0d3",
  "simhash": 2766784222141141632,
  "simhash_updated": false,
  "site_hostname": "hoodamateurs.com",
  "site_url": "http://hoodamateurs.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20190610080848",
  "word_count": 1116,
  "year": 2019
}

--- a/h/ho/hoo/hoodamateurs.com.html
+++ b/h/ho/hoo/hoodamateurs.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hoodamateurs.com privacy policy that was archived on 2018-12-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181227044605id_/http%3A//www.hoodamateurs.com/static/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hoodamateurs.com privacy policy that was archived on 2019-06-10.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190610080848id_/http%3A//www.hoodamateurs.com/static/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 	<meta charset="utf-8">
@@ -24,7 +24,7 @@
 	<script src="/templates/defboot/js/scripts.js"></script>
 	<script type="text/javascript">var base_url = 'http://www.hoodamateurs.com'; var cur_url = 'http://www.hoodamateurs.com/static/privacy/'; var rel_url = ''; var tmb_url = '/media/videos/tmb'; var age_check = 0;</script>
 		<script src="https://www.google.com/recaptcha/api.js"></script>
-</head>
+<script type="text/javascript" async="" src="//widgets.amung.us/a_pro.js"></script></head>
 <body>
 <div id="login-container"></div>
 <header>
@@ -297,7 +297,18 @@ document.body.unload=function() {
 <iframe class="as_300x250" src="http://vip.adstatic.com/ad/IQwiotn.html" width="300px" height="250px" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
 
 
-<iframe class="as_300x250" src="http://vip.adstatic.com/ad/KmeW5GZ.html" width="300px" height="250px" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe></div></div>
+<iframe class="as_300x250" src="http://vip.adstatic.com/ad/KmeW5GZ.html" width="300px" height="250px" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
+
+
+
+<script type="text/javascript" id="wau_scr_32b14eb0">
+    var wau_p = wau_p || []; wau_p.push(["s2pz", "32b14eb0", false]);
+    (function() {
+        var s=document.createElement("script"); s.type="text/javascript";
+        s.async=true; s.src="//widgets.amung.us/a_pro.js";
+        document.getElementsByTagName("head")[0].appendChild(s);
+    })();
+</script></div></div>
 <footer class="footer">
 	<div class="container">
 		<ul class="list-inline text-center">
@@ -307,7 +318,7 @@ document.body.unload=function() {
 <li><a href="/static/dmca/" title="DMCA">DMCA</a></li>
 <li><a href="/static/2257/" title="2257">2257</a></li>
 <li><a href="/link/add/" title="Link Exchange">Add Link</a></li>
-</ul>		<span>© 2018 HOOD AMATEURS FREE BLACK  EBONY AMATEUR PORN</span>
+</ul>		<span>© 2019 HOOD AMATEURS FREE BLACK  EBONY AMATEUR PORN</span>
 	</div>
 </footer>
 
