--- a/m/mi/mic/micmusik.com.html
+++ b/m/mi/mic/micmusik.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the micmusik.com privacy policy that was archived on 2017-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606185024id_/https%3A//micmusik.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the micmusik.com privacy policy that was archived on 2019-06-10.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190610095854id_/https%3A//micmusik.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="no-js beige micmusik music"><!--<![endif]--><head>
         <meta charset="utf-8">
@@ -12,15 +12,25 @@
 <title>micmusik.com - Privacy Policy</title>
 
 <!--BootstrapStyle-->
-<link rel="shortcut icon" href="https://cdn.123shapeme.com/img/assets/favicon.ico"><link rel="stylesheet" type="text/css" href="https://cdn.123shapeme.com/theme/Entertainment/Quartet/css/frontend/theme/beige.css">
+<link rel="shortcut icon" href="/img/assets/favicon.ico"><link rel="stylesheet" type="text/css" href="/theme/Entertainment/Quartet/css/frontend/theme-rev/beige.c8573f22.css">
 <!--[if lt IE 8]>
-    <link rel="stylesheet" type="text/css" href="https://cdn.123shapeme.com/components/Bootstrap-IE7Fix/css/bootstrap-ie7fix.min.css" /><![endif]-->
+    <link rel="stylesheet" type="text/css" href="/components/Bootstrap-IE7Fix/css/bootstrap-ie7fix.min.css"/><![endif]-->
 
 <!--[if lt IE 9]>
-    <script type="text/javascript" src="https://cdn.123shapeme.com/components/html5shiv/dist/html5shiv.js"></script>    <script type="text/javascript" src="https://cdn.123shapeme.com/components/respond/src/respond.js"></script><![endif]-->
-    </head>
+    <script type="text/javascript" src="/components/html5shiv/dist/html5shiv.js"></script>    <script type="text/javascript" src="/components/respond/src/respond.js"></script><![endif]-->
+        <!-- Google Tag Manager -->
+<script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-MMPL24Z"></script><script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-MMPL24Z');</script>
+<!-- End Google Tag Manager -->    </head>
     <body>
 
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MMPL24Z"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
     <!-- Emergency Alerts-->
     
 
@@ -37,7 +47,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="/"><img src="https://cdn.123shapeme.com/img/logos/music/min/micmusik.png" alt="micmusik.com - Privacy Policy" class="img-responsive"></a>                </div>
+                    <a href="/"><img src="/img/logos/music/min/micmusik.png" alt="micmusik.com - Privacy Policy" class="img-responsive"></a>                </div>
                 <p id="questions" class="text-right">Questions? 1-888-794-0963 | <a href="mailto:info@micmusik.com">info@micmusik.com</a></p>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -85,8 +95,6 @@
 <li><a href="/privacy-policy">Privacy Policy</a></li>
 <li><a href="/refund-policy">Refund Policy</a></li>
 <li><a href="/about-us">About Us</a></li>
-
-
 <li><a href="/support">Contact Us</a></li>
 <li><a href="/support">Support</a></li>
 <li><a href="/affiliates">Affiliates</a></li>                    </ul>
@@ -98,11 +106,11 @@
             <div class="row">
                 <div class="col-sm-8">
                     <address>
-                        © 2017 micmusik.com. All rights reserved. Drixstand LTD - EVAGOROU, 31, EVAGORAS COMPLEX, 5TH FLOOR, FLAT/OFFICE 54,1066, NICOSIA, CYPRUS
+                        © 2019 micmusik.com. All rights reserved. Drixstand LTD - EVAGOROU, 31, EVAGORAS COMPLEX, 5TH FLOOR, FLAT/OFFICE 54,1066, NICOSIA, CYPRUS
                     </address>
                 </div>
                 <div class="col-sm-4">
-                    <a href="/"><img src="https://cdn.123shapeme.com/img/logos/music/min/micmusik_dark.png" class="img-responsive" alt=""></a>                </div>
+                    <a href="/"><img src="/img/logos/music/min/micmusik_dark.png" class="img-responsive" alt=""></a>                </div>
             </div>
         </div>
     </footer>
@@ -117,7 +125,7 @@
             <div class="modal-body">
                 <div class="row">
                     <div class="col-md-12">
-                        <img src="https://cdn.123shapeme.com/img/logos/music/min/micmusik_dark.png" alt="micmusik.com - Privacy Policy" class="img-responsive center-block">                    </div>
+                        <img src="/img/logos/music/min/micmusik_dark.png" alt="micmusik.com - Privacy Policy" class="img-responsive center-block">                    </div>
                 </div>
                 <div class="row">
 
@@ -126,11 +134,11 @@
                         
                         <form action="/users/login" role="form" id="loginPrivacyForm" method="post" accept-charset="utf-8"><div style="display:none;"><input type="hidden" name="_method" value="POST"></div>
                             <div class="form-group">
-                                <input type="email" id="UserUsername" name="data[User][username]" placeholder="Email..." class="form-control validate[required,custom[email]]">
+                                <input type="email" id="UserUsernameLogin" name="data[User][username]" placeholder="Email..." class="form-control validate[required,custom[email]]">
                             </div>
 
                             <div class="form-group">
-                                <input type="password" id="UserPassword" name="data[User][password]" placeholder="Password..." class="form-control validate[required]">
+                                <input type="password" id="UserPasswordLogin" name="data[User][password]" placeholder="Password..." class="form-control validate[required]">
                             </div>
 
                             <div class="form-group">
@@ -147,8 +155,7 @@
                         <a class="pull-left" style="cursor:pointer" data-target="#ppvFP" data-toggle="modal">Forgot Password?</a>
                     </div>
                     <div class="col-md-6 clearfix">
-                                                    <a class="pull-right" href="/subscriptions/registration">No account? Register now!</a>
-                                            </div>
+                                                    <a href="/Subscriptions" class="pull-right">No account? Register now!</a>                                            </div>
                 </div>
             </div>
         </div><!-- /.modal-content -->
@@ -165,7 +172,7 @@
                 <div class="modal-body">
                     <div class="row">
                         <div class="col-md-12">
-                            <img src="https://cdn.123shapeme.com/img/logos/music/min/micmusik_dark.png" alt="micmusik.com - Privacy Policy" class="img-responsive center-block">                        </div>
+                            <img src="/img/logos/music/min/micmusik_dark.png" alt="micmusik.com - Privacy Policy" class="img-responsive center-block">                        </div>
                     </div>
                     <div class="row">
                         <div class="col-md-12">
@@ -193,25 +200,164 @@
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
     </div>
-<script type="text/javascript" src="https://cdn.123shapeme.com/theme/Entertainment/Quartet/js/frontend/min/scripts.min.js"></script>
+<script type="text/javascript" src="/theme/Entertainment/Quartet/js/frontend/min-rev/scripts.min.9782309d.js"></script>
 <!--  Start Five 9 code  -->
                         <style>
+                .five9-frame-full {
+                    position: absolute;
+                    bottom: 10%;
+                    right:0px;
+                    height: 590px;
+                    width:430px;
+                    display:block;
+                    pointer-events: none;
+                    overflow:hidden;
+                }
+                .open-header {
+                    -ms-transform: rotate(-90deg);
+                    -webkit-transform: rotate(-90deg);
+                    transform: rotate(-90deg);
+                    -webkit-animation-duration: 1s;
+                    -webkit-transition: 1s ease-in-out;
+                    -moz-transition: 1s ease-in-out;
+                    -o-transition: 1s ease-in-out;
+                    transition: 1s ease-in-out;
+                    position: absolute;
+                    bottom: 400px;
+                    right: 266px;
+                    pointer-events: all;
+                }
+                .open-header #five9-popout-button {
+                    display: inline-block;
+                    position: absolute;
+                    float:right;
+                    right: 5px;
+                }
+                .close-header {
+                    position: absolute;
+                    bottom: 10px;
+                    right: 50px;
+                    pointer-events: all;
+                }
+                @media only screen and (min-width: 813px) and (min-height: 590px) {
+                    .close-header {
+                        -ms-transform: rotate(-90deg);
+                        -webkit-transform: rotate(-90deg);
+                        transform: rotate(-90deg);
+                        -webkit-animation-duration: 1s;
+                        -webkit-transition: 1s ease-in-out;
+                        -moz-transition: 1s ease-in-out;
+                        -o-transition: 1s ease-in-out;
+                        transition: 1s ease-in-out;
+                        position: absolute;
+                        bottom: 400px;
+                        right: -95px;
+                        pointer-events: all;
+                    }
+                }
+                .close-header #five9-popout-button {
+                    display: none;
+                }
                 .five9-chat-button{
                     font-size: 2.5em;
                     padding: 5px 80px 0 90px;
+                    width: 270px;
+                    height: 60px;
+                    padding-top: 5px;
                 }
 
                 .five9-chat-button .five9-text{
                     color : #FFF;
                 }
+
+                #embedded-frame{
+                    clear:both;
+                    width:360px;
+                    height: 590px;
+                    position: absolute;
+                    right: -360px;
+                    opacity: 1;
+                    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+                    -moz-animation: fadein 2s; /* Firefox < 16 */
+                    -ms-animation: fadein 2s; /* Internet Explorer */
+                    -o-animation: fadein 2s; /* Opera < 12.1 */
+                    animation: fadein 2s;
+                }
+
+                @keyframes fadein {
+                    from { opacity: 0; }
+                    to   { opacity: 1; }
+                }
+
+                /* Firefox < 16 */
+                @-moz-keyframes fadein {
+                    from { opacity: 0; }
+                    to   { opacity: 1; }
+                }
+
+                /* Safari, Chrome and Opera > 12.1 */
+                @-webkit-keyframes fadein {
+                    from { opacity: 0; }
+                    to   { opacity: 1; }
+                }
+
+                /* Internet Explorer */
+                @-ms-keyframes fadein {
+                    from { opacity: 0; }
+                    to   { opacity: 1; }
+                }
+
+                /* Opera < 12.1 */
+                @-o-keyframes fadein {
+                    from { opacity: 0; }
+                    to   { opacity: 1; }
+                }
+
+                #div-chat{
+                    position: absolute;
+                    width: 1px;
+                    height: 590px;
+                    right:0px;
+                    /*overflow:hidden;*/
+                }
+                .close-frame-chat{
+                    -webkit-animation-duration: 1s;
+                    -webkit-transition: 1s ease-in-out;
+                    -moz-transition: 1s ease-in-out;
+                    -o-transition: 1s ease-in-out;
+                    transition: 1s ease-in-out;
+                    position: absolute;
+                    right: 0px;
+                }
+                .open-frame-chat{
+                    -webkit-animation-duration: 1s;
+                    -webkit-transition: 1s ease-in-out;
+                    -moz-transition: 1s ease-in-out;
+                    -o-transition: 1s ease-in-out;
+                    transition: 1s ease-in-out;
+                    position: absolute;
+                    pointer-events: all;
+                    width:1px !important;
+                    right: 360px !important;
+                    background-color: #fff;
+                }
+                .five9-frame-full div iframe{
+                    position:absolute;
+                    right: -350px;
+                }
+                .five9-text{
+                    margin-top: 5px;
+                }
+
             </style>
 
             <script type="text/javascript">
-                var tenant = 'Dynamo Media 2';
+                var tenant = 'Fantastic Corp';
                 var profiles = 'Live Chat';
                 var webname = 'micmusik.com';
-                var cdnUrl = 'https://cdn.123shapeme.com/';
-                var logoChat = 'img/logos/music/min/micmusik.png';
+
+                                var cdnUrl = 'http://micmusik.com/';
+                var logoChat = 'img/logos/music/min/micmusik_chat.png';
 
                 Five9SocialWidget.addWidget({
                     type: "chat",
