--- a/l/lo/lov/lovepoemsandquotes.com.html
+++ b/l/lo/lov/lovepoemsandquotes.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the lovepoemsandquotes.com privacy policy that was archived on 2018-11-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181106154858id_/http%3A//www.lovepoemsandquotes.com/Privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lovepoemsandquotes.com privacy policy that was archived on 2019-06-10.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190610102813id_/http%3A//www.lovepoemsandquotes.com/Privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html lang="en"><head>
 
@@ -15,8 +15,8 @@
 <!-- Privacy Policy -->
 
 <script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" src="http://code.jquery.com/jquery-1.3.js"></script>
-<script type="text/javascript" src="Poll.js"></script>
-<script type="text/javascript" src="Rate.js"></script>
+<script type="text/javascript" src="Poll2.js"></script>
+<script type="text/javascript" src="Rate2.js"></script>
 <script type="text/javascript" src="Bookmark.js"></script>
 <script type="text/javascript" src="SocialMedia.js"></script>
 
@@ -112,7 +112,7 @@
         <img src="Pics/FollowUs.gif" width="168" height="21" border="0" alt="Follow us"><br>
         <a href="http://www.facebook.com/LovePoemsAndQuotes" target="_blank"><img src="Pics/Facebook-Follow.png" width="32" height="32" alt="Follow us on Facebook" title="Follow us on Facebook"></a>
         <a href="http://www.twitter.com/LovePoemsAndQuo" target="_blank"><img src="Pics/Twitter-Follow.png" width="32" height="32" alt="Follow us on Twitter" title="Follow us on Twitter"></a>
-        <a href="http://plus.google.com/+LovePoemsAndQuotes" target="_blank"><img src="Pics/Google-Follow.png" width="32" height="32" alt="Follow us on Google+" title="Follow us on Google+"></a>
+        <a href="https://www.instagram.com/lovepoemsandquotesdotcom/" target="_blank"><img src="Pics/Instagram-Follow.png" width="32" height="32" alt="Follow us on Instagram" title="Follow us on Instagram"></a>
         <a href="MonthlyWinnersNewsletter.html"><img src="Pics/Newsletter-Follow.png" width="32" height="32" alt="Subscribe to our newsletter" title="Subscribe to our newsletter"></a> 
       </div>
 
@@ -123,16 +123,12 @@
       <table width="175" cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#FFFFFF">
         <tbody><tr><td width="175" align="center"><img src="Pics/x.gif" width="1" height="10" border="0" alt=""></td></tr></tbody></table>
 
-      <table width="175" cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#FFFFFF">
-        <tbody><tr><td width="175" align="center" class="vstxt">
-              <img src="Pics/Google-PlusOne.gif" width="175" height="62" border="0" alt="+1 on Google Plus" style="padding-bottom:4px;"><br><div style="height:31px; margin-left:28px"><g:plusone size="medium"></g:plusone></div>
-            </td></tr></tbody></table>
-      <table width="175" cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#FFFFFF">
-        <tbody><tr><td width="175" align="center"><img src="Pics/x.gif" width="1" height="10" border="0" alt=""></td></tr></tbody></table>
-
       <table width="175" cellspacing="0" cellpadding="5" border="1" align="center" bgcolor="#FFFACD">
-        <tbody><tr><td width="165" align="center" class="vstxt" background="Pics/HeartsBackground.gif">
-              <strong>OUR MONTHLY POLL</strong><br><br>How often do you and your partner give each other massages?<br><br><input type="radio" name="answer_id" value="189">Very often<br><input type="radio" name="answer_id" value="190">Sometimes<br><input type="radio" name="answer_id" value="191">Rarely<br><input type="radio" name="answer_id" value="192">Never<br><br><input type="button" class="VoteButton" value="Vote!" onclick="RegisterVote (71)"><div id="PollMessage"></div>            </td></tr></tbody></table>
+        <tbody><tr><td id="poll" width="165" align="center" class="vstxt" background="Pics/HeartsBackground.gif">
+              <script>
+                showPoll ();
+              </script>
+            </td></tr></tbody></table>
     </td>
     <td width="3" valign="top"></td>
     <td width="470" align="center" valign="top">
@@ -197,10 +193,6 @@
 
             <!-- Conversant Media 160x600 WIDE SKYSCRAPER CODE for Love Poems And Quotes -->
           </td></tr></tbody></table>
-      <table width="162" cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#FFFFFF">
-        <tbody><tr><td width="162" align="center"><img src="Pics/x.gif" width="1" height="12" border="0" alt=""></td></tr></tbody></table>
-      <table width="162" cellspacing="0" cellpadding="0" border="1" align="center" bgcolor="#99CCFF">
-        <tbody><tr><td width="162" align="center" class="vstxt"><a href="http://www.shareasale.com/r.cfm?b=49963&amp;u=63701&amp;m=1837&amp;urllink=&amp;afftrack=" target="_blank" rel="nofollow"><img src="http://www.shareasale.com/image/125_1254.gif" width="125" height="125" border="0" alt="Sara Freder"></a></td></tr></tbody></table>
       <table width="162" cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#FFFFFF">
         <tbody><tr><td width="162" align="center"><img src="Pics/x.gif" width="1" height="12" border="0" alt=""></td></tr></tbody></table>
       <table width="162" cellspacing="0" cellpadding="0" border="1" align="center" bgcolor="#FFFFFF">
@@ -275,7 +267,7 @@ var AFS_Url="DetectUrl";
 French Version / Version Française :<br>
 <a href="http://www.poesieetcitationsdamour.com/" target="_blank" rel="nofollow">Poésie et Citations d'Amour</a>
 <br><br><br>
-<strong><a href="TermsOfUse.html">Copyright</a> © 2002 - 2018 Love Poems And Quotes</strong><br>
+<strong><a href="TermsOfUse.html">Copyright</a> © 2002 - 2019 Love Poems And Quotes</strong><br>
 <span class="vstxt">The poems and quotes on this website are the property<br>
 of their respective authors and may not be reproduced.</span>
 </td></tr>
