--- a/f/fx/fxh/fxhome.com.html
+++ b/f/fx/fxh/fxhome.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the fxhome.com privacy policy that was archived on 2018-07-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180718211448id_/https%3A//fxhome.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fxhome.com privacy policy that was archived on 2019-06-10.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190610111236id_/https%3A//fxhome.com/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html><!--<![endif]--><head>
+<!DOCTYPE html><html lang="en"><!--<![endif]--><head>
 		<meta charset="utf-8">
 		<meta name="ROBOTS" content="INDEX,FOLLOW">
 		<meta name="revisit-after" content="3 Days">
@@ -9,7 +9,7 @@
 		<meta http-equiv="imagetoolbar" content="no">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-		<meta name="copyright" content="2018 FXhome Limited. All rights reserved.">
+		<meta name="copyright" content="2019 FXhome Limited. All rights reserved.">
 
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<meta http-equiv="cleartype" content="on">
@@ -42,23 +42,36 @@
 		<link rel="apple-touch-icon" sizes="76x76" href="https://s3.amazonaws.com/fxhome-static/images/global/hf/apple-touch-icon-ipad@1x.png">
 		<link rel="apple-touch-icon" sizes="152x152" href="https://s3.amazonaws.com/fxhome-static/images/global/hf/apple-touch-icon-ipad@2x.png">
 
-		<link rel="stylesheet" href="http://fxhome.com/style/3da9e9389f031141fefdaa5bfa7909a9584032bf/global-new.css">
+		<link rel="stylesheet" href="https://fxhome.com/style/ce6e848b3f844976c7ab3c2bc331eab4bbab2450/global-new.css">
 		<script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
-		<script src="http://fxhome.com/js/3da9e9389f031141fefdaa5bfa7909a9584032bf/global.js"></script>
-				 <!-- Google Analytics -->
-        <script>
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		<script src="https://fxhome.com/js/ce6e848b3f844976c7ab3c2bc331eab4bbab2450/global.js"></script>
+								<!-- Google Analytics -->
+			<script>
+				(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+				})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-            ga('create', 'UA-1002391-1', 'auto');  // Replace with your property ID.
-            ga('send', 'pageview');
-        </script>
-        <!-- End Google Analytics -->
+				ga('create', 'UA-1002391-1', 'auto');  // Replace with your property ID.
+				ga('set', 'transport', 'beacon'); // Updates the tracker to use `navigator.sendBeacon` if available.
+				ga('send', 'pageview');
+			</script>
+			<!-- End Google Analytics -->
+			
+			<!-- Global site tag (gtag.js) - Google Ads: 1067452095 -->
+			<script async="" src="https://www.googletagmanager.com/gtag/js?id=AW-1067452095"></script>
+			<script>
+			  window.dataLayer = window.dataLayer || [];
+			  function gtag(){dataLayer.push(arguments);}
+			  gtag('js', new Date());
+			</script>
 
-			</head>
+						<script>gtag('set', 'allow_ad_personalization_signals', false);</script>
+			<script>gtag('config', 'AW-1067452095', {'send_page_view': false});</script>
+			
+					
+	</head>
 	<body>
 		<!--[if lte IE 9]>
         <div class="old-browser-warning">
@@ -66,10 +79,10 @@
         </div>
         <![endif]-->
 
-			<div id="cookie-notice" class="cookie-notice" data-last-updated="1526947200">
-		<h5><i class="ion-information-circled"></i>This website uses cookies</h5>
-		<p>We use cookies to personalise your content, analyse our traffic and improve your browsing experience. You consent to our cookies if you continue to use our website.</p>
-		<p>Read more about our use of <a href="/cookies">cookies</a>. Understand your data by reading our <a href="/privacy">Privacy policy</a>.</p>
+			<div id="cookie-notice" class="cookie-notice" data-last-updated="1542621300">
+		<h3><i class="ion-information-circled"></i>This website uses cookies</h3>
+		<p>We use cookies to personalise your content, analyse our traffic and improve your browsing experience. You consent to our cookies if you continue to use our&nbsp;website.</p>
+		<p>Read more about our use of <a href="/cookies">cookies</a>. Understand your data by reading our <a href="/privacy">Privacy&nbsp;policy</a>.</p>
 
 		<a id="cookie-notice-accept" class="btn" style="display: none">Accept</a>
 		<a class="btn-link" href="/cookies#preferences">Options</a>
@@ -77,7 +90,7 @@
 
 		<nav class="nav ">
 			<div class="nav-brand">
-				<a href="/" class="nav-brand-logo"><img src="https://s3.amazonaws.com/fxhome-static/images/global/fxhome-96.png" alt=""></a>
+				<a href="/" class="nav-brand-logo" title="Return to site index"><img src="https://s3.amazonaws.com/fxhome-static/images/global/fxhome-96.png" alt=" logo"></a>
 									<a href="/" class="nav-brand-text">FXhome</a>
 							</div>
 			<ul>
@@ -93,17 +106,16 @@
 					</ul>
 					<ul class="nav-links-secondary">
 						<li><a href="/action-pro">Action Pro</a></li>
-						<li><a href="/express">HitFilm Express <span class="free">free</span></a></li>
+						<li><a href="/hitfilm-express">HitFilm Express <span class="free">free</span></a></li>
 						<li><a href="/hitfilm-pro">HitFilm Pro</a></li>
 						<li><a href="/hitfilm-studio">HitFilm Studio</a></li>
 						<li><a href="/ignite-express">Ignite Express <span class="free">free</span></a></li>
 						<li><a href="/ignite-pro">Ignite Pro</a></li>
-						<li><a href="/photokey-pro">PhotoKey 8 Pro</a></li>
-						<li><a href="/photokey-studio">PhotoKey 8 Studio</a></li>
+						<li><a href="/imerge-pro">Imerge Pro</a></li>
 					</ul>
 					<ul class="nav-links-secondary">
 						<li><a href="/blog">Blog</a></li>
-						<li><a href="/forum">Forum</a></li>
+						<li><a href="/forum/sso">Forum</a></li>
 						<li><a href="/faqs">Frequently asked questions</a></li>
 						<li><a href="/masterclasses">Masterclasses</a></li>
 						<li><a href="/support">Support &amp; License retrieval</a></li>
@@ -111,10 +123,10 @@
 						<li><a href="/video-tutorials">Video tutorials</a></li>
 					</ul>
 					<ul class="nav-links-social">
-		        		<li><a href="http://youtube.com/FXhomeHitFilm" title="YouTube"><img class="icon" src="https://s3.amazonaws.com/fxhome-static/images/global/icons8-play-button.svg" alt="YouTube"></a></li>
-		        		<li><a href="https://www.instagram.com/hitfilm/" title="Instagram"><img class="icon" src="https://s3.amazonaws.com/fxhome-static/images/global/icons8-instagram.svg" alt="Instagram"></a></li>
-		        		<li><a href="http://facebook.com/HitFilm" title="Facebook"><img class="icon" src="https://s3.amazonaws.com/fxhome-static/images/global/icons8-facebook.svg" alt="Facebook"></a></li>
-	        			<li><a href="http://twitter.com/HitFilmOFFICIAL" title="Twitter"><img class="icon" src="https://s3.amazonaws.com/fxhome-static/images/global/icons8-twitter.svg" alt="Twitter"></a></li>
+		        		<li><a href="https://www.youtube.com/c/FXhome" title="YouTube"><img class="icon" src="https://s3.amazonaws.com/fxhome-static/images/global/icons8-play-button.svg" alt="YouTube"></a></li>
+		        		<li><a href="https://www.instagram.com/fxhome_official" title="Instagram"><img class="icon" src="https://s3.amazonaws.com/fxhome-static/images/global/icons8-instagram.svg" alt="Instagram"></a></li>
+		        		<li><a href="http://facebook.com/FXhome" title="Facebook"><img class="icon" src="https://s3.amazonaws.com/fxhome-static/images/global/icons8-facebook.svg" alt="Facebook"></a></li>
+	        			<li><a href="https://twitter.com/FXhome" title="Twitter"><img class="icon" src="https://s3.amazonaws.com/fxhome-static/images/global/icons8-twitter.svg" alt="Twitter"></a></li>
 					</ul>
 
 					<div class="nav-spacer"></div>
@@ -169,7 +181,7 @@
 	<p>This version was last updated on 23rd May 2018</p>
 	<p>It is important that the personal data we hold about you is accurate and current. Please keep us informed if your personal data changes during your relationship with us.</p>
 	<h3>Third-party links</h3>
-	<p>Our website may include links to third-party websites, plug-ins and applications. Clicking on those links or enabling those connections may allow third parties to collect or share data about you. We do not control these third-party websites and are not responsible for their privacy statements. When you leave our website, we encourage you to read the privacy notice of every website you visit.</p>
+	<p>Our website may include links to third-party websites, plugins and applications. Clicking on those links or enabling those connections may allow third parties to collect or share data about you. We do not control these third-party websites and are not responsible for their privacy statements. When you leave our website, we encourage you to read the privacy notice of every website you visit.</p>
 </div>
 
 <div class="container-small">
@@ -532,21 +544,27 @@
       </div>
       <div class="flex-item-4up">
         <h3>Photo Software</h3>
+        <ul style="margin-bottom: 1em">
+          <li><a href="/imerge-pro">Imerge Pro</a></li>
+        </ul>
+        <h4>Legacy Software</h4>
         <ul>
           <li><a href="/photokey-pro">PhotoKey 8 Pro</a></li>
           <li><a href="/photokey-studio">PhotoKey 8 Studio</a></li>
         </ul>
       </div>
       <div class="flex-item-4up">
-        <h3>Effects Plug-ins</h3>
+        <h3>Effects Plugins</h3>
         <ul>
           <li><a href="/ignite-express">Ignite Express <span class="free">free</span></a></li>
           <li><a href="/ignite-pro">Ignite Pro</a></li>
         </ul>
+        <h3><a href="/compare">Compare Products »</a></h3>
       </div>
       <div class="flex-item-4up">
         <h3>Subscribe for latest updates and <span class="badassical">special offers</span>.</h3>
         <div id="newsletterSubscribe">
+          <label for="newsletterSubscribeEmail" class="visually-hidden">Email address:</label>
           <input id="newsletterSubscribeEmail" type="email" placeholder="Email">
           <div id="newsletterSubscribeButton" class="btn">
             <span class="action">Subscribe</span>
@@ -601,13 +619,13 @@
   </div>
   <div class="g-container-medium copyright-notice">
     <div class="g-unit-12 g-medium-unit-12 g-large-unit-12">
-      <p>© 2018 FXhome Limited. All rights reserved. "FXhome", "PhotoKey" and "HitFilm" are trademarks of FXhome Limited.</p>
+      <p>© 2019 FXhome Limited. All rights reserved. "FXhome", "PhotoKey", "Imerge" and "HitFilm" are trademarks of FXhome Limited.</p>
       <p class="policy">By continuing to browse our website, you agree to our <a href="/cookies"><strong>Cookies</strong></a> policy. <a href="/terms"><strong>Terms and Conditions</strong></a> apply.<br>Understand your data by reading our <a href="/privacy"><strong>Privacy policy</strong></a>.</p>
       <ul class="footer-links-social">
-        <li><a href="http://youtube.com/FXhomeHitFilm" title="YouTube"><img class="icon" src="https://s3.amazonaws.com/fxhome-static/images/global/icons8-play-button.svg" alt="YouTube"></a></li>
-        <li><a href="https://www.instagram.com/hitfilm/" title="Instagram"><img class="icon" src="https://s3.amazonaws.com/fxhome-static/images/global/icons8-instagram.svg" alt="Instagram"></a></li>
-        <li><a href="http://facebook.com/HitFilm" title="Facebook"><img class="icon" src="https://s3.amazonaws.com/fxhome-static/images/global/icons8-facebook.svg" alt="Facebook"></a></li>
-        <li><a href="http://twitter.com/HitFilmOFFICIAL" title="Twitter"><img class="icon" src="https://s3.amazonaws.com/fxhome-static/images/global/icons8-twitter.svg" alt="Twitter"></a></li>
+        <li><a href="https://www.youtube.com/c/FXhome" title="YouTube"><img class="icon" src="https://s3.amazonaws.com/fxhome-static/images/global/icons8-play-button.svg" alt="YouTube"></a></li>
+        <li><a href="https://www.instagram.com/fxhome_official/" title="Instagram"><img class="icon" src="https://s3.amazonaws.com/fxhome-static/images/global/icons8-instagram.svg" alt="Instagram"></a></li>
+        <li><a href="http://facebook.com/FXhome" title="Facebook"><img class="icon" src="https://s3.amazonaws.com/fxhome-static/images/global/icons8-facebook.svg" alt="Facebook"></a></li>
+        <li><a href="https://twitter.com/FXhome" title="Twitter"><img class="icon" src="https://s3.amazonaws.com/fxhome-static/images/global/icons8-twitter.svg" alt="Twitter"></a></li>
       </ul>
     </div>
   </div>
