--- a/w/wo/woo/woodweb.com.html
+++ b/w/wo/woo/woodweb.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the woodweb.com privacy policy that was archived on 2018-12-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181209112541id_/http%3A//www.woodweb.com/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the woodweb.com privacy policy that was archived on 2019-06-10.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190610121222id_/http%3A//woodweb.com/privacypolicy.html) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
