--- a/f/fl/fly/flyariana.com.html
+++ b/f/fl/fly/flyariana.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the flyariana.com privacy policy that was archived on 2018-04-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180412234337id_/http%3A//www.flyariana.com/Corp/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the flyariana.com privacy policy that was archived on 2019-06-10.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190610153002id_/https%3A//www.flyariana.com/Corp/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -22,7 +22,7 @@
 
 </head>
 
-<body>
+<body style="zoom: 1;">
     
     <div class="cms-section section-site-header " id="SiteHeader">
 <div class="container">
@@ -37,6 +37,9 @@
             </li>
             <li data-source-name="Login" class="">
                 <a href="/ArianaLoyaltyClub/login">My Account</a>
+            </li>
+            <li data-source-name="jobs" class="">
+                <a href="/jobs">Careers</a>
             </li>
 
         </ul>
@@ -182,7 +185,7 @@ Your information is only accessible to you through use of your NIC# and secret p
         <a href="https://twitter.com/flyARIANAafghan" target="_blank"><img src="/Content/Layouts/Vector/images/design/logo-social-tw.png"></a>
         <a><img src="/Content/Layouts/Vector/images/design/logo-iata.png"></a>
     </div>
-    <h5>©Ariana Afghan Airlines 2018. Powered by Zapways Inc.</h5>
+    <h5>©Ariana Afghan Airlines 2019. Powered by Zapways Inc.</h5>
 </div>
     </div>
 
