2game.com (archived on 2019-06-10)
{
  "alexa_rank": 155938,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 16184,
  "classifier_probability": 0.9,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.0,
  "homepage_snapshot_redirected_domain": "2game.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190331111442id_/https://2game.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190331111442id_/http%3A//2game.com",
  "interval": "2019_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "2game.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190610193442id_/https%3A//2game.com/privacy-policy",
  "policy_title": "Privacy Policy",
  "policy_url": "2game.com/privacy-policy",
  "sha1": "13c6c4bd3a6fc46a7aa544406d37328477f4bed3",
  "simhash": 10991854885782495452,
  "simhash_updated": true,
  "site_hostname": "2game.com",
  "site_url": "http://2game.com",
  "smog": 13.66,
  "strict_updated": true,
  "timestamp": "20190610193442",
  "word_count": 2629,
  "year": 2019
}

--- a/2/2g/2ga/2game.com.html
+++ b/2/2g/2ga/2game.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the 2game.com privacy policy that was archived on 2018-11-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181124214922id_/https%3A//2game.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 2game.com privacy policy that was archived on 2019-06-10.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190610193442id_/https%3A//2game.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 
@@ -55,7 +55,6 @@
 <script type="text/javascript" src="https://2game.com/js/varien/menu.js"></script>
 <script type="text/javascript" src="https://2game.com/js/mage/translate.js"></script>
 <script type="text/javascript" src="https://2game.com/js/mage/cookies.js"></script>
-<script type="text/javascript" src="https://2game.com/js/plumrocket/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="https://2game.com/js/varien/product.js"></script>
 <script type="text/javascript" src="https://2game.com/js/calendar/calendar.js"></script>
 <script type="text/javascript" src="https://2game.com/js/calendar/calendar-setup.js"></script>
@@ -89,6 +88,7 @@
 <script type="text/javascript" src="https://2game.com/skin/frontend/v42game/default/direction-hover/js/jquery.hoverdir.js"></script>
 <script type="text/javascript" src="https://2game.com/skin/frontend/v42game/default/direction-hover/js/modernizr.custom.97074.js"></script>
 <script type="text/javascript" src="https://2game.com/skin/frontend/v42game/default/js/jquery.downcount.min.js"></script>
+<script type="text/javascript" src="https://2game.com/skin/frontend/v42game/default/js/jquery.confirm.min.js"></script>
 <script type="text/javascript" src="https://2game.com/js/ebizmarts/mailchimp/campaignCatcher.js" async=""></script>
 <script type="text/javascript" src="https://2game.com/skin/frontend/base/default/js/tm/ajaxsearch/xregexp-all.js" defer=""></script>
 <script type="text/javascript" src="https://2game.com/skin/frontend/base/default/js/tm/ajaxsearch.js" defer=""></script>
@@ -247,12 +247,12 @@ src="https://www.facebook.com/tr?id=160722154591145&ev=PageView&noscript=1&a=exm
 		
 		font-size: 13px;
 		color: #999999;
-		background-color: #222222;
+		background-color: #150C1F;
 		background-repeat: no-repeat;
 		background-position: center top;
         background-attachment: fixed;
         
-        					                			            background-image:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url(https://2game.com/media/pattern/default/2Game.jpg);
+        					                			            background-image:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url(https://2game.com/media/pattern/default/Why2GamePro_3.png);
 			}
 
 	body a{
@@ -291,12 +291,12 @@ src="https://www.facebook.com/tr?id=160722154591145&ev=PageView&noscript=1&a=exm
         jQuery(document).ready(function($) {
             $('.base-bg-left-link,.base-bg-right-link').mouseover(function(){
                 $('body').css({
-                    'background-image':'url(https://2game.com/media/pattern/default/2Game.jpg)'
+                    'background-image':'url(https://2game.com/media/pattern/default/Why2GamePro_3.png)'
                 }).animate({'background-position-y': '-=30px'}, 400);
             });
             $('.base-bg-left-link,.base-bg-right-link').mouseout(function(){
                 $('body').css({
-                    'background-image':'linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url(https://2game.com/media/pattern/default/2Game.jpg)'
+                    'background-image':'linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url(https://2game.com/media/pattern/default/Why2GamePro_3.png)'
                 }).animate({'background-position-y': '+=30px'}, 400);
             });
         });
@@ -514,7 +514,7 @@ src="https://www.facebook.com/tr?id=160722154591145&ev=PageView&noscript=1&a=exm
 				    </a>
 			    </div>
                 <ul class="nav__list">
-    <li class="level0 nav-1 first level-top"><a href="https://2game.com/pc-games" class="level-top"><span>Games</span></a></li><li class="level0 nav-2 level-top"><a href="https://2game.com/hot-deals" class="level-top"><span>BLACK FRIDAY DEALS</span></a></li><li class="level0 nav-3 last level-top"><a href="https://2game.com/xbox" class="level-top"><span>XBox LIVE</span></a></li>    <!-- <li class="nav__item"><a href="club">2Game Club</a></li> -->
+    <li class="level0 nav-1 first level-top"><a href="https://2game.com/pc-games" class="level-top"><span>Games</span></a></li><li class="level0 nav-2 level-top"><a href="https://2game.com/hot-deals" class="level-top"><span>HOT DEALS</span></a></li><li class="level0 nav-3 level-top"><a href="https://2game.com/xbox" class="level-top"><span>XBox LIVE</span></a></li><li class="level0 nav-4 last level-top"><a href="https://2game.com/giveaway" class="level-top"><span>GIVEAWAY</span></a></li>    <!-- <li class="nav__item"><a href="club">2Game Club</a></li> -->
     <li class="nav__item"><a href="https://2game.zendesk.com/hc/en-us" target="_blank">FAQ</a></li>
 </ul>
 
@@ -572,7 +572,7 @@ src="https://www.facebook.com/tr?id=160722154591145&ev=PageView&noscript=1&a=exm
             </div>
             <div class="nav__switched-padded">
 			    <ul class="nav__list">
-    <li class="level0 nav-1 first level-top"><a href="https://2game.com/pc-games" class="level-top"><span>Games</span></a></li><li class="level0 nav-2 level-top"><a href="https://2game.com/hot-deals" class="level-top"><span>BLACK FRIDAY DEALS</span></a></li><li class="level0 nav-3 last level-top"><a href="https://2game.com/xbox" class="level-top"><span>XBox LIVE</span></a></li>    <!-- <li class="nav__item"><a href="club">2Game Club</a></li> -->
+    <li class="level0 nav-1 first level-top"><a href="https://2game.com/pc-games" class="level-top"><span>Games</span></a></li><li class="level0 nav-2 level-top"><a href="https://2game.com/hot-deals" class="level-top"><span>HOT DEALS</span></a></li><li class="level0 nav-3 level-top"><a href="https://2game.com/xbox" class="level-top"><span>XBox LIVE</span></a></li><li class="level0 nav-4 last level-top"><a href="https://2game.com/giveaway" class="level-top"><span>GIVEAWAY</span></a></li>    <!-- <li class="nav__item"><a href="club">2Game Club</a></li> -->
     <li class="nav__item"><a href="https://2game.zendesk.com/hc/en-us" target="_blank">FAQ</a></li>
 </ul>
 
@@ -600,7 +600,7 @@ src="https://www.facebook.com/tr?id=160722154591145&ev=PageView&noscript=1&a=exm
 		<a href="javascript:void(0)" title="Close" class="close close-login fa fa-times-circle" data-dismiss="modal"></a>
 		<div class="tt_popup_login"><strong>Sign in Or Register to Continue</strong></div>
 		<form action="https://2game.com/customer/account/loginPost/" method="post">
-			<input name="form_key" type="hidden" value="KyaRbReoPJSJM69D">
+			<input name="form_key" type="hidden" value="mLe8IHTkKciN21dD">
             <div class="container-fluid">
 			    <div class="block-content row">
                     <div class="col-reg login-customer col-md-6 col-lg-6 col-sm-6 col-xs-12">
@@ -665,10 +665,10 @@ src="https://www.facebook.com/tr?id=160722154591145&ev=PageView&noscript=1&a=exm
 					    </div>
                         
 <div class="recaptcha" style="overflow:hidden;position:relative;margin-bottom:10px;">
-    <input type="checkbox" id="cb-5bf9c76707678" name="cb-5bf9c76707678" value="" class="required-entry" style="visibility:hidden; position:absolute; left:-1000000px">
-    <div id="el-5bf9c76707678"></div>
+    <input type="checkbox" id="cb-5cfeb0d38f9cc" name="cb-5cfeb0d38f9cc" value="" class="required-entry" style="visibility:hidden; position:absolute; left:-1000000px">
+    <div id="el-5cfeb0d38f9cc"></div>
     <script type="text/javascript">
-        grecaptchaObj = {id:'5bf9c76707678', theme:'light'};
+        grecaptchaObj = {id:'5cfeb0d38f9cc', theme:'light'};
         if (Array.isArray( grecaptchaIds )) {
             grecaptchaIds.push(grecaptchaObj);
         } else {
@@ -892,7 +892,7 @@ src="https://www.facebook.com/tr?id=160722154591145&ev=PageView&noscript=1&a=exm
 <p>You are advised to review this Privacy Policy periodically for any changes. Changes to this Privacy Policy are effective when they are posted on this page.</p>
 <h2>Contact Us</h2>
 <p>If you have any questions about this Privacy Policy, please contact us:</p>
--&nbsp;By email: <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="186b6d6868776a6c582a7f79757d367b7775">[email&nbsp;protected]</a></div>							</div>
+-&nbsp;By email: <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="d4a7a1a4a4bba6a094e6b3b5b9b1fab7bbb9">[email&nbsp;protected]</a></div>							</div>
 						</div>
 					</div>
                 </div>
@@ -1013,7 +1013,7 @@ src="https://www.facebook.com/tr?id=160722154591145&ev=PageView&noscript=1&a=exm
 				</div>
 
 				<div class="footer__badge">
-					<img src="https://2game.com/skin/frontend/v42game/default/stm/images/safety-icon-copy.png" alt="">
+					<img src="https://2game.com/skin/frontend/v42game/default/images/safety-icon.png" alt="">
 					<div>
 						<span>SAFETY <br> GUARANTEED</span>
 					</div>
