cosdna.com (archived on 2019-06-10)
{
  "alexa_rank": 18853,
  "analysis_subcorpus": true,
  "categories": "business;foodandrecipes",
  "char_count": 9517,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.13,
  "homepage_snapshot_redirected_domain": "cosdna.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190401010314id_/http://www.cosdna.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190401010314id_/http%3A//cosdna.com",
  "interval": "2019_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "cosdna.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190610215447id_/http%3A//www.cosdna.com/eng/help/privacy.php",
  "policy_title": "Privacy Policy | CosDNA",
  "policy_url": "cosdna.com/eng/help/privacy.php",
  "sha1": "cc57ace69d0dc13278df00dad4bc3e0b49dbe8e6",
  "simhash": 18336908196875221201,
  "simhash_updated": false,
  "site_hostname": "cosdna.com",
  "site_url": "http://cosdna.com",
  "smog": 13.77,
  "strict_updated": false,
  "timestamp": "20190610215447",
  "word_count": 1548,
  "year": 2019
}

--- a/c/co/cos/cosdna.com.html
+++ b/c/co/cos/cosdna.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cosdna.com privacy policy that was archived on 2018-12-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181224114148id_/http%3A//www.cosdna.com/eng/help/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cosdna.com privacy policy that was archived on 2019-06-10.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190610215447id_/http%3A//www.cosdna.com/eng/help/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <title>Privacy Policy | CosDNA</title>
@@ -9,12 +9,12 @@
 <body>
 <div id="pagebase">
 <div id="toolbar">
-    <span style="float: left;">
-<img src="/images/eng.gif" alt="" border="0" align="absmiddle"> »&nbsp;&nbsp;<a href="/cht/help/privacy.php"><img src="/images/cht.gif" alt="" border="0" class="img_dark" align="absmiddle" title="切換為繁體"></a> <a href="/chs/help/privacy.php"><img src="/images/chs.gif" alt="" border="0" class="img_dark" align="absmiddle" title="切换为简体"></a> <a href="/jpn/help/privacy.php"><img src="/images/jpn.gif" alt="" border="0" class="img_dark" align="absmiddle" title="日本語に切り替え"></a> </span>
-<span style="float: right;">
-<a href="/eng/user/signup.php">Sign up</a>
+    <span>
+	<img src="/images/eng.gif" alt="" border="0" align="absmiddle"> »&nbsp;&nbsp;<a href="/cht/help/privacy.php"><img src="/images/cht.gif" alt="" border="0" class="img_dark" align="absmiddle" title="切換為繁體"></a> <a href="/chs/help/privacy.php"><img src="/images/chs.gif" alt="" border="0" class="img_dark" align="absmiddle" title="切换为简体"></a> <a href="/jpn/help/privacy.php"><img src="/images/jpn.gif" alt="" border="0" class="img_dark" align="absmiddle" title="日本語に切り替え"></a> 	<a href="https://m.cosdna.com/eng/help/privacy.php"><i class="fa fa-mobile fa-lg ml10"></i> Mobile version</a></span>
+<span>
+	<a href="/eng/user/signup.php">Sign up</a>
 				  |	<a href="/eng/user/login.php"><i class="fa fa-sign-in"></i> Login</a>
-				 </span></div>
+	</span></div>
 <div id="title">
     <table width="100%" border="0" cellpadding="0" cellspacing="0">
         <tbody><tr>
@@ -33,8 +33,8 @@
             <li id="em3"><a href="/eng/ingredients.php">Analyze Cosmetics</a></li>
             <li id="em4"><a href="/eng/supplier/product.php">Ingredients Buying</a></li>
             <li id="em5"><a href="/eng/soap_recipe.php">Handmade Soap</a></li>
-            <li id="em6"><a href="/eng/forum/">Forum</a></li> 
-            <li id="em7"></li>    
+            <li id="em6"><a href="/eng/forum/">Forum</a></li>
+            <li id="em7"></li>
             </ul>
 </div><div class="levelindex"><img src="/images/icon_black.gif" align="absmiddle"> <a href="/eng/">CosDNA</a> &gt; <span class="titlename">Privacy Policy</span></div>
 	<div class="titlename">
