auto-power-girl.com (archived on 2019-06-10)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "vehicles",
  "char_count": 3775,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.32,
  "homepage_snapshot_redirected_domain": "auto-power-girl.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190330200523id_/http://www.auto-power-girl.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190330200523id_/http%3A//auto-power-girl.com",
  "interval": "2019_A",
  "link_text": "Privacy Policies",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "auto-power-girl.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190610224916id_/http%3A//www.auto-power-girl.com/privacy-policies.html",
  "policy_title": "Privacy Policies",
  "policy_url": "auto-power-girl.com/privacy-policies.html",
  "sha1": "557bb0f8f499d7cfcb99b92e5351ff96f38e583e",
  "simhash": 9116164402140373962,
  "simhash_updated": false,
  "site_hostname": "auto-power-girl.com",
  "site_url": "http://auto-power-girl.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20190610224916",
  "word_count": 622,
  "year": 2019
}

--- a/a/au/aut/auto-power-girl.com.html
+++ b/a/au/aut/auto-power-girl.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the auto-power-girl.com privacy policy that was archived on 2018-05-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180514044759id_/http%3A//www.auto-power-girl.com/privacy-policies.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the auto-power-girl.com privacy policy that was archived on 2019-06-10.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190610224916id_/http%3A//www.auto-power-girl.com/privacy-policies.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <meta charset="utf-8">
@@ -212,7 +212,7 @@ s.parentNode.insertBefore(po, s);
     <div class="col-md-3"><!-- google_ad_section_start -->
       <ul class="nav nav-pills nav-stacked">
         <li class="active"><a href="http://www.auto-power-girl.com/" title="Auto-Power-Girl" rel="nofollow">Home</a></li>
-        <li><a href="http://www.auto-power-girl.com/cars-2010/nissan-specifications/nissan_370z_lsd_doors_from_senner_tuning-4077" title="">Nissan 370Z LSD doors from Senner Tuning</a></li><li><a href="http://www.auto-power-girl.com/cars-2009/rolls_royce-specifications/rollsroyce_200ex-3171" title="">Rolls-Royce 200EX</a></li><li><a href="http://www.auto-power-girl.com/cars-2009/infiniti-specifications/infiniti_essence-3224" title="">Infiniti Essence</a></li><li><a href="http://www.auto-power-girl.com/cars-2013/toyota-specifications/toyota_vitz_grmn_turbo-6916" title="">Toyota Vitz GRMN Turbo</a></li>
+        <li><a href="http://www.auto-power-girl.com/specifications/volkswagen/vw+_volkswagen_golf_plus_goal-510" title="">VW+ Volkswagen Golf Plus Goal</a></li><li><a href="http://www.auto-power-girl.com/cars-2012/bmw-specifications/bmw_6series_gran_coupe-5079" title="">BMW 6-Series Gran Coupe</a></li><li><a href="http://www.auto-power-girl.com/cars-2008/maybach-specifications/maybach_62_landaulet-2250" title="">Maybach 62 Landaulet</a></li><li><a href="http://www.auto-power-girl.com/cars-2015/volkswagen-specifications/volkswagen_golf_gti_dark_shine_concept-8051" title="">Volkswagen Golf GTI Dark Shine concept</a></li>
       </ul><!-- google_ad_section_end -->
 	  <div class="row"><div class="col-md-12">
 	  <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -274,7 +274,7 @@ s.parentNode.insertBefore(po, s);
         </li>
 		    <li><a href="http://www.auto-power-girl.com/contact.html" title="Contact" style="color:#FFFFFF;" rel="nofollow">Contact</a></li>
             <li><a href="http://www.auto-power-girl.com/privacy-policies.html" title="Privacy Policies" style="color:#FFFFFF;" rel="nofollow">Privacy Policies</a></li>
-			            <li><a href="http://www.auto-power-girl.com/" title="Copyright" style="color:#FFFFFF;" rel="nofollow">Copyright( © ) Auto-Power-Girl.com 2006-2015. All rights reserved.</a></li>
+			            <li><a href="http://www.auto-power-girl.com/" title="Copyright" style="color:#FFFFFF;" rel="nofollow">Copyright( © ) Auto-Power-Girl.com 2006 - 2019. All rights reserved.</a></li>
 			<li><a href="http://www.auto-power-girl.com/autonews.xml" title="Rss AutoNews" style="color:#FFFFFF;">RSS AutoNews</a></li>
       </ul>
     </div>
