--- a/i/in/ind/indiareviewchannel.com.html
+++ b/i/in/ind/indiareviewchannel.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the indiareviewchannel.com privacy policy that was archived on 2018-12-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181209060528id_/http%3A//www.indiareviewchannel.com/general/PrivacyPolicy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the indiareviewchannel.com privacy policy that was archived on 2019-06-10.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190610231455id_/http%3A//indiareviewchannel.com/general/PrivacyPolicy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head id="Head1">
 
 <script id="facebook-jssdk" src="//connect.facebook.net/en_US/sdk.js#xfbml=1&amp;version=v2.3&amp;appId=211956038847988"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script language="javascript">
     // Search dialog handling
     function OpenSearch() {
-        location = "/search/default.aspx?Search=" + escape(document.getElementById('txtSearch').value);
+        location = "/search/default.aspx?search=" + escape(document.getElementById('txtSearch').value);
         return false;
     }
 
@@ -14,7 +14,7 @@
         e.which = e.which || e.keyCode;
         if (e.which == 13) {
             //window.open('/search/Index.aspx?Search=' + document.getElementById('txtSearch').value, "_SELF");
-            location = "/search/default.aspx?Search=" + escape(document.getElementById('txtSearch').value);
+            location = "/search/default.aspx?search=" + escape(document.getElementById('txtSearch').value);
             return false;
         }
 
@@ -346,6 +346,10 @@ $('#searchbutton').click(function () {
            e.preventDefault();
        });
 </script>
+
+
+
+
 
 
 
